Fix draftlist checkbox horizontal spacing

--- a/Libadwaita/styles/draftlist.less
+++ b/Libadwaita/styles/draftlist.less
@@ -50,10 +50,6 @@
 //------------------------------------------------------------
 // Draft items
 //------------------------------------------------------------
-.draft-list .list-tabular .list-column {
-	margin-left: 4px;
-}
-
 .draft-list .list-container .list-item {
 	background-color: @card_bg_color;
 	border-bottom: 1px solid @borders_color;
@@ -90,7 +86,6 @@
 			width: 20px;
 			height: 20px;
 			padding: 3px;
-			margin-right: 10px;
 	
 			&:hover {
 				box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.16);
